--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch": "tsc -w",
     "start": "node dist/index.js",
     "dev": "nodemon dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "create:migration": "mikro-orm migration:create"
   },
   "keywords": [],
   "author": "",
