--- a/package.json
+++ b/package.json
@@ -7,17 +7,12 @@
     "watch": "tsc -w",
     "start": "node dist/index.js",
     "dev": "nodemon dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "create:migration": "mikro-orm migration:create"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mikro-orm/cli": "^4.0.0",
-    "@mikro-orm/core": "^4.0.0",
-    "@mikro-orm/migrations": "^4.0.0",
-    "@mikro-orm/postgresql": "^4.0.0",
     "apollo-server-express": "^2.19.0",
     "argon2": "^0.27.0",
     "connect-redis": "^5.0.0",
@@ -30,6 +25,7 @@
     "pg": "^8.4.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.0",
+    "typeorm": "^0.2.29",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
@@ -44,12 +40,5 @@
     "@types/uuid": "^8.3.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
