--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "watch": "tsc -w",
+    "gen-env": "gen-env-types .env -o src/env.d.ts -e .",
     "start": "node dist/index.js",
     "dev": "nodemon dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +20,7 @@
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
     "dataloader": "^2.0.0",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.4.0",
@@ -39,6 +42,7 @@
     "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.28",
     "@types/uuid": "^8.3.0",
+    "gen-env-types": "^1.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
